hphp/test/zend/good/ext-mbstring/mb_ereg_replace-compat-02.php
<?php
/* (counterpart: ext/standard/tests/reg/002.phpt) */
  $a="abc123";
  echo mb_ereg_replace("123","",$a);
?>